# preprod

./: .gitignore  README.md  preprod.epj  pyproject.toml
.github/workflows/: python-app.yml
doc/: PREPROD_COMMANDS.md
preprod/: __init__.py  commons.py  core.py  poethepoet.py  version.py
preprod/locale/: en.po  es.po  preprod.pot
preprod/locale/es/LC_MESSAGES/: preprod.mo
preprod/tests/: test_commons.py
repository/: commons
repository/first/: start
